# intruth-factcheck

./: .env.example  .gitignore  LICENSE  README.md  config.win.example.yaml
adapters/: __init__.py  wasapi_capture.py
docs/: intruth-logic-extraction.md
extension/realtime-factcheck/src/content/: overlay.js
extension/realtime-factcheck/src/offscreen/: offscreen.html  offscreen.js
extension/realtime-factcheck/src/popup/: popup.js
mcp-servers/mcp-factcheck/: bias.py
mcp-servers/mcp-factcheck/retrieval/: __init__.py  base.py  filter.py  searxng.py  tavily.py
realtime-factcheck/: .gitignore  manifest.json
realtime-factcheck/src/background/: service-worker-ex.js
realtime-factcheck/src/content/: lexical-features.js  overlay.css  session-export.js
services/cognitive-core/: README.md  pyproject.toml
services/cognitive-core/intruth_engine/: __init__.py  bus.py  config.py  llm.py  protocol.py  server.py
services/cognitive-core/intruth_engine/asr/: __init__.py  vad.py  whisper.py
services/cognitive-core/intruth_engine/claims/: __init__.py  dedup.py  lexical.py  prompts.py  verify.py  window.py
services/cognitive-core/intruth_engine/dashboard/: index.html
services/cognitive-core/intruth_engine/pii/: __init__.py  redact.py
services/cognitive-core/intruth_engine/store/: __init__.py  db.py
services/cognitive-core/tests/: test_m2_claims.py  test_smoke.py
